added firebase hosting

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "firebase": "^9.9.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
